Project Upgrade
-Java 11 and openJFX requred.
-Opuslib is now available and working.
-cleanup