@@ -11,7 +11,10 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+         <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <mainClass>com.stefy.upgrader.stefyupgrader.MainApp</mainClass>
+        <jpackager.path>/usr/lib/jvm/java-11-openjdk-amd64/bin/jpackager</jpackager.path>
     </properties>
 
     <organization>
@@ -24,7 +27,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.6</version>
+                <version>3.1.1</version>
                 <executions>
                     <execution>
                         <id>unpack-dependencies</id>
@@ -40,53 +43,53 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
+            <plugin>   
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.6.0</version>
+                
                 <executions>
                     <execution>
                         <id>unpack-dependencies</id>
+                        <phase>install</phase> <!--package-->
                         
-                        <phase>package</phase>
                         <goals>
-                            <goal>exec</goal>
+                           
+                            <goal>java</goal><!--exec no error for snapshot with dependecies.--> 
                         </goals>
-                        <configuration>
-                            <executable>${java.home}/../bin/javapackager</executable>
-                            <arguments>
-                                <argument>-createjar</argument>
-                                <argument>-nocss2bin</argument>
-                                <argument>-appclass</argument>
-                                <argument>${mainClass}</argument>
-                                <argument>-srcdir</argument>
-                                <argument>${project.build.directory}/classes</argument>
-                                <argument>-outdir</argument>
-                                <argument>${project.build.directory}</argument>
-                                <argument>-outfile</argument>
-                                <argument>${project.build.finalName}.jar</argument>
-                            </arguments>
-                        </configuration>
                     </execution>
-                    <execution>
-                        <id>default-cli</id>
-                        <goals>
-                            <goal>exec</goal>                            
-                        </goals>
-                        <configuration>
-                            <executable>${java.home}/bin/java</executable>
-                            <commandlineArgs>${runfx.args}</commandlineArgs>
-                        </configuration>
-                    </execution>
-                </executions>  
+                </executions>
+                <configuration>
+                            
+                    <mainClass>com.stefy.upgrader.stefyupgrader.MainApp</mainClass>
+                    <executable>${jpackager.path}</executable>
+                    <arguments>
+                        <argument>--verbose</argument>
+                        <argument>--echo-mode</argument>
+                    
+                        <argument>--class</argument>
+                        <argument>com.stefy.upgrader.stefyupgrader.MainApp</argument>
+                        <argument>--main-jar</argument>
+                        <argument>./StefyUpgrader.0.1.jar</argument>
+                        <argument>--output</argument>
+                        <argument>package</argument>
+                        <argument>--identifier</argument>
+                        <argument>com.stefy.upgrader.stefyupgrader</argument>
+                        <argument>--name</argument>
+                        <argument>StefyUpgrader</argument>
+
+
+                    </arguments>
+                </configuration>
+                
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
+                <version>3.8.0</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>11</source>
+                    <target>11</target>
                     <compilerArguments>
                         <bootclasspath>${sun.boot.class.path}${path.separator}${java.home}/lib/jfxrt.jar</bootclasspath>
                     </compilerArguments>
@@ -95,15 +98,20 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.20</version>
+                <version>2.22.1</version>
                 <configuration>
                     <additionalClasspathElements>
                         <additionalClasspathElement>${java.home}/lib/jfxrt.jar</additionalClasspathElement>
                     </additionalClasspathElements>
+                     <argLine>
+            --illegal-access=permit
+        </argLine>
                 </configuration>
+               
             </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
+                  <version>3.1.0</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
                     <archive>
@@ -113,8 +121,8 @@
                         </manifest>
 
                     </archive>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>11</source>
+                    <target>11</target>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
@@ -137,7 +145,7 @@
         <dependency>
             <groupId>com.jfoenix</groupId>
             <artifactId>jfoenix</artifactId>
-            <version>8.0.3</version>
+            <version>9.0.8</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
@@ -158,6 +166,16 @@
             <groupId>net.bramp.ffmpeg</groupId>
             <artifactId>ffmpeg</artifactId>
             <version>0.6.2</version>
+        </dependency>
+ <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>11.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>11.0.2</version>
         </dependency>
 
 
